<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/directions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/login_form"
        android:textStyle="bold"
        android:text="@string/directions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/login_form"
        android:hint="@string/user_name_hint"
        app:layout_constraintTop_toBottomOf="@+id/directions"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/pass_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/login_form"
        android:hint="@string/pass_word_hint"
        app:layout_constraintTop_toBottomOf="@+id/user_name"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/login_form"
        android:text="@string/login_button"
        app:layout_constraintTop_toBottomOf="@id/pass_word"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/logged_in"
        style="@style/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/login_success"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>